# dioxus-dashboard

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.yml  tailwind.css
assets/: main.css  tailwind.css
migrations/: 20260112123416_create_users_table.sql  20260112123416_create_users_table.up.sql
src/: main.rs  routes.rs
src/backend/: mod.rs
src/backend/auth/: login.rs
src/backend/database/: connection.rs
src/backend/domains/: mod.rs
src/backend/domains/auth/: auth_controller.rs  auth_dto.rs  auth_service.rs  login.rs  mod.rs
src/backend/domains/users/: mod.rs  user_entity.rs  user_model.rs  user_repository.rs
src/components/: mod.rs
src/components/button/: auth_button.rs  auth_footer_button.rs  mod.rs
src/components/card/: auth_card.rs  mod.rs
src/components/input/: mod.rs  password_input.rs  text_input.rs
src/components/layout/: dashboard_layout.rs  mod.rs  permission_layout.rs
src/components/navbar/: constant.rs  menu_item.rs  mod.rs  navbar.rs  navbar_logo.rs  navbar_right.rs  sidebar_toggle.rs  user_avatar.rs  user_menu.rs
src/components/sidebar/: constant.rs  menu.rs  mod.rs  sidebar.rs
src/components/toast/: mod.rs  toast.rs
src/components/toggle/: mod.rs  theme_toggle.rs
src/hooks/: mod.rs  use_dark_mode.rs
src/pages/: dashboard.rs  forget_password.rs  home.rs  kanban.rs  kanban_detail.rs  login.rs  mod.rs  not_found.rs  register.rs
src/utils/: jwt.rs  mod.rs  password_hash.rs
